correcting spacings

--- a/styles/book.css
+++ b/styles/book.css
@@ -1,7 +1,7 @@
 .book {
     display: none;
 
-    margin: 4% 0 5% 0;
+    margin: 6% 0 5% 0;
     position: relative;
     width: 93%;
     height: 130.2vh;
