--- a/styles/closedbook.css
+++ b/styles/closedbook.css
@@ -1,7 +1,11 @@
 .closedbook {
-    display: block;
+    display: flex;
 
-    margin: 4% 0 5% 0;
+    align-items:flex-start;
+    justify-content:space-between;
+    flex-direction: column;
+
+    margin: 6% 0 5% 0;
     position: relative;
     width: 46.5%;
     height: 130.2vh;
@@ -11,9 +15,10 @@
     overflow: hidden;
     box-shadow: 6px 0 rgb(156, 156, 156), 10px 0 var(--primary);
 
-    padding: 3rem;
+    padding: 3rem 3rem 18rem 3rem;
 }
 
-.closedbook:hover input {
-    animation: shiver 2s infinite;
+.closedbook > div {
+    width: 100%;
+    height: 100%;
 }
