--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@
 @import url('tooltip.css');
 @import url('keybind.css');
 @import url('utils.css');
-@import url('spacings.css');
+@import url('loader.css');
 
 :root {
     --fontTitle: "Roboto Slab";
@@ -78,4 +78,56 @@ body {
     filter: brightness(60%) opacity(60%);
     transform: scale(0.97);
     cursor: url(../images/block.cur), not-allowed;
+}
+
+.glint-text {
+    position: relative;
+    overflow: hidden;
+    font-family: var(--fontTitle);
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+    color: var(--h2);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.glint-text::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.6), transparent);
+    animation: glint 1.5s infinite;
+}
+
+@keyframes glint {
+    0% {}
+
+    100% {
+        left: 100%;
+    }
+}
+
+.flag {
+    width: 3.5rem;
+    height: auto;
+    cursor: pointer;
+    margin: 0 .5rem;
+    opacity: 0.3;
+}
+
+.flag.active {
+    transform: scale(1.2);
+    opacity: 1;
+}
+
+.flag:hover {
+    opacity: 1;
+}
+
+.flag.active:hover {
+    animation: none;
 }
